# renovate

./: .all-contributorsrc.json  .appveyor.yml  .babelrc  .dockerignore  .editorconfig  .env  .envrc  .eslintignore  .eslintrc  .eslintrc.js  .gitattributes  .gitignore  .gitpod.Dockerfile  .gitpod.yml  .lgtm.yml  .lintstagedrc  .lintstagedrc.json  .ls-lint.yml  .markdownlint-cli2.jsonc  .markdownlint-cli2.mjs  .npmignore  .npmrc  .oxlintrc.json  .pdm-python  .pre-commit-hooks.yaml  .prettierignore  .prettierrc  .prettierrc.json  .python-version  .releaserc  .releaserc.json  .rules  .swcrc  .test-shards.json  .test-shards.py  .travis.yml  .tslintrc.js  .vale.ini  .whitesource  36522.diff  (+84 more)
.azure/: docker.macos.yml  docker.yml  steps.yml
.circleci/: config.yml  configure.yml
.claude/: CLAUDE.md  config.json  settings.json
.claude/agents/: acceptance-qa.md  analyst.md  architect.md  bdd-agent.md  bdd-test-runner.md  codebase-analyst.md  coder.md  coding-standards-checker.md  debugger.md  fix-failing-tests.md  forensic.md  gherkin-to-test.md  init-explorer.md  refactor-decision-engine.md  refactorer.md  requirements-qa.md  scope-manager.md  strict-coder.md  stuck-original.md  stuck-terragon.md  stuck.md  test-creator.md  tester-backend.md  (+3 more)
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/: CODEOWNERS  auto-cancel-actions.yml  behavior.md  contributing.md  dependabot.yml  issue_template.md  label-actions.yml  labeler.yml  lock.yml  lychee.toml  prettifier.yml  pull_request_template.md  semantic.yml  test-shards.py
.gitpod/: .gitpod.Dockerfile  .gitpod.yml
.husky/: pre-commit
__mocks__/: fs.ts
app/: index.js  index.ts  logger.js  renovate.js  tsconfig.json
azure-pipelines/: azure-pipelines.yml
data/: abandonment-config.json  abandonment-config.schema.json  azure-pipelines-marketplace-tasks.json  azure-pipelines-tasks-info.json  azure-pipelines-tasks.json  debian-distro-info.json  emojibase-github-shortcodes.json  extract.py  k8s-images.json  kubernetes-api.json5  lambda-node-js-schedule.json  node-js-schedule.json  releases.yaml  ubuntu-distro-info.json
docker/: Dockerfile  bake.hcl  cache.hcl
docs/: adding-a-package-manager.md  behaviour.md  best-practices.md  branches-commits.md  configuration-methods.md  configuration.md  deployment.md  design-decisions.md  docusaurus.config.js  faq.md  local-development.md  migrating-from-travis-to-circle-ci.md  package.json  pre-release.md  readme.md  self-hosting.md  shareable-configs.md  status-checks.md
e2e/: package.json
eslint-rules/: sorted-array-by-name.js
example/: config.json
hooks/: post_checkout  post_push  readme.md
i18n/: action.sh  messages.pot  sources.txt
lib/: .eslintrc.js  commander.d.ts  config-validator.spec.ts  config-validator.ts  expose.browser.ts  expose.cjs  expose.ts  globals.d.ts  index.js  index.ts  license-dump.ts  logger.js  missing.d.ts  package.ts  proxy.js  proxy.spec.ts  proxy.ts  punycode.cjs  renovate.js  renovate.spec.ts  renovate.ts  tsconfig.json  types.d.ts  worker.js  zod.ts
lib/modules/manager/haskell-cabal/__fixtures__/: Octree-0.5.cabal  all-upper-bound.cabal  anynone.cabal  assoc-cpp-options.cabal  cc-options-with-optimization.cabal  common-conditional.cabal  common.cabal  common2.cabal  common3.cabal  cxx-options-with-optimization.cabal  decreasing-indentation.cabal  denormalised-paths.cabal  elif.cabal  elif2.cabal  generics-sop.cabal  haddock-api-2.18.1-check.cabal  hidden-main-lib.cabal  issue-5055.cabal  issue-6083-a.cabal  issue-6083-b.cabal  issue-6083-c.cabal  issue-6083-pkg-pkg.cabal  issue-8646.cabal  jaeger-flamegraph.cabal  leading-comma-2.cabal  leading-comma.cabal  libpq1.cabal  libpq2.cabal  minimal.cabal  mixin-1.cabal  mixin-2.cabal  mixin-3.cabal  monad-param.cabal  multiple-libs-2.cabal  noVersion.cabal  public-multilib-1.cabal  public-multilib-2.cabal  shake.cabal  th-lift-instances.cabal  wl-pprint-indef.cabal
lib/modules/manager/pixi/__fixtures__/: pixi.toml  pyproject.2.toml  pyproject.toml  pyproject_no_pixi.toml
nixtest/: flake.nix
patches/: @jest+types++chalk+3.0.0.patch  @semantic-release__github.patch  global-agent.patch  install-artifact-from-github@1.6.0.patch  jest-runtime+25.1.0.patch  jest-runtime+25.2.7.patch  jest-runtime+25.3.0.patch  jest-runtime+25.4.0.patch  jest-runtime+25.5.0.patch  re2.patch  readme.md  v8-to-istanbul+7.1.0.patch  vfile-message+2.0.4.patch  xmldoc.patch
src/: config.js  defaults.js  github.js  index.js  npm.js
styles/: readme.md
templates/: group-pr-body.hbs
test/: .eslintrc.js  cache-mock.ts  chai.js  documentation.spec.ts  exec-util.ts  execUtil.ts  fixtures.ts  gcs.ts  git.ts  global-setup.ts  globals.js  globals.ts  graphql-snapshot.ts  host-rules.ts  http-mock.spec.ts  http-mock.ts  httpMock.ts  index.js  index.spec.js  instrumentation.ts  jest-legacy.ts  json-schema.sh  json-schema.ts  jwt-util.ts  mocha.opts  newline-snapshot-serializer.js  newline-snapshot-serializer.ts  platform.js  platformUtil.ts  proxy.spec.js  proxy.spec.ts  renovate.js  renovate.spec.js  renovate.spec.ts  s3-mock.ts  s3.ts  setup.ts  spawn-util.ts  static-files.spec.js  static-files.spec.ts  (+9 more)
tests/: StatelessAnonComponent.js  StatelessComponent.js
tools/: azure-pipelines-tasks-json-generate.mjs  build.mjs  check-fenced-code.mjs  check-fenced-code.ts  check-git-version.js  check-git-version.mjs  check-re2.mjs  check-todo-issue-refs.spec.ts  check-todo-issue-refs.ts  check-undesirable-code.sh  check-unlabeled-issues.sh  check_compatibility.js  check_compatibility.mjs  clean-cache.mjs  dispatch-release.mjs  distro-json-generate.mjs  distro-json-generate.ts  docker.mjs  docker.ts  eslint-gh-reporter.js  eslint-gh-reporter.ts  find-issues-with-missing-labels.sh  generate-docs.js  generate-docs.ts  generate-hash.mjs  generate-hex-protos.ts  generate-imports.js  generate-imports.mjs  generate-imports.ts  generate-npm-shrinkwrap.mjs  generate-protos.mjs  generate-protos.ts  generate-schema.ts  jest-gh-reporter.js  jest-gh-reporter.ts  jest-gh.reporter.ts  jest.mjs  mkdocs.ts  package.json  patch-jest.mjs  (+17 more)
(+9522 files in other folders)
