name:                Octree
version:             0.5
stability:           beta
homepage:            https://github.com/mgajda/octree
package-url:         http://hackage.haskell.org/package/octree
synopsis:            Simple unbalanced Octree for storing data about 3D points
description:         Octree data structure is relatively shallow data structure for space partitioning.
category:            Data
license:             BSD3
license-file:        LICENSE

author:              Michal J. Gajda
copyright:           Copyright by Michal J. Gajda '2012
maintainer:          mjgajda@googlemail.com
bug-reports:         mailto:mjgajda@googlemail.com


build-type:          Simple
cabal-version:       >=1.8
tested-with:         GHC==7.0.4,GHC==7.4.1,GHC==7.4.2,GHC==7.6.0

source-repository head
  type:     git
  location: git@github.com:mgajda/octree.git

Library
   build-depends:    base>=4.0 && < 4.7, AC-Vector >= 2.3.0, QuickCheck >= 2.4.0
   exposed-modules:  Data.Octree
   other-modules:    Data.Octree.Internal
   exposed:          True
   extensions:       ScopedTypeVariables

Test-suite test_Octree
  Type:              exitcode-stdio-1.0
  Build-depends:     base>=4.0 && < 4.7, AC-Vector >= 2.3.0, QuickCheck >= 2.4.0
  Main-is:           tests/test_Octree.hs

Test-suite readme
  type:           exitcode-stdio-1.0
  -- We have a symlink: README.lhs -> README.md
  main-is:        README.lhs
  Build-depends:  base>=4.0 && < 4.7, AC-Vector >= 2.3.0, QuickCheck >= 2.4.0, markdown-unlit
  ghc-options:    -pgmL markdown-unlit

