cabal-version: 3.0
name:          all-upper-bound
version:       0
synopsis:      all-upper-bound
category:      Tests
license:       MIT
maintainer:    someone@example.com
description:   all-upper-bound test package.

library
  default-language: Haskell2010
  build-depends:
    , base     ^>=4.14
    , somelib
    , alphalib
    , betalib
    , deltalib

  exposed-modules:  Foo
