name:                common
version:             0
x-revision:          1
synopsis:            Common-stanza demo demo
build-type:          Simple
cabal-version:       >=1.10
-- note: empty field
x-follows-version-policy:

source-repository head
  Type:     git
  Location: https://github.com/hvr/-.git

common deps
  build-depends:
    base >=4.10 && <4.11,
    containers

library
  import: deps

  default-language: Haskell2010
  exposed-modules:  "ElseIf"

  build-depends:
    ghc-prim

test-suite tests
  import: deps

  type: exitcode-stdio-1.0
  main-is: Tests.hs

  build-depends:
    HUnit
