name:                elif
version:             0
synopsis:            The elif demo
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  Type:     git
  Location: https://github.com/hvr/-.git

library
  default-language: Haskell2010
  exposed-modules:  ElseIf

  if os(linux)
    build-depends: unix
  elif os(windows)
    build-depends: Win32
  else
    buildable: False
