cabal-version: 3.4
name: issue
version: 6083

library
  default-language: Haskell2010
  -- This should be parsed as the main lib
  build-depends: base, issue:sublib

library sublib
  default-language: Haskell2010

executable demo-a
  main-is: Main.hs
  build-depends: issue, sublib

executable demo-b
  main-is: Main.hs
  build-depends: issue, issue:sublib
