cabal-version: 3.0

name: issue
version: 8646
build-type: Simple
category: Test
maintainer: Joe
synopsis: Input to 'cabal check'
description: Input to 'cabal check'.
license: BSD-3-Clause

executable test
  main-is: ExeMain.hs
  build-depends: base > 4 && < 5
  default-language: Haskell2010
  ghc-options: -main-is ExeMain
