cabal-version:       3.0
name:                leading-comma
version:             0
synopsis:            leading comma, trailing comma, or ordinary
build-type:          Simple

library
  default-language: Haskell2010

  -- empty field on purpose
  exposed-modules:

  exposed-modules:
    , LeadingComma
    , LeadingComma2

  exposed-modules:
    TrailingComma,
    TrailingComma,

  exposed-modules: Comma, InBetween

  exposed-modules: NoCommas NoCommas

  build-depends: base, containers

  build-depends:
    deepseq,
    transformers,

  build-depends:
    , filepath
    , directory
