cabal-version: 3.0
name: mixin
version: 0

-- mixin field:
-- in 2.2 we got leading/trailing commas
-- in 3.0 we got lax space parsing
executable str-example
  main-is:             Main.hs
  build-depends:       base, str-string, str-bytestring
  mixins:              str-string     ( Str as Str.String     ),
                       str-bytestring ( Str as Str.ByteString ),
  hs-source-dirs:      str-example
